src/styles/5 - components/_banner.scss
.banner {
    width: 100%;
    height: 40rem;
    margin-top: 2rem;
   
    background: #f3f3f3;
    display: flex;

    @include mobile {
        height: auto;
        flex-direction: column;
    }
}

.banner-desc {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    padding: 5rem;
    flex-basis: 50%;

    @include mobile {
        padding: 5rem 0;
    }

    h1 {
        font-size: 4.8rem;
        margin-bottom: 1rem;
        width: 80%;

        @include mobile {
            width: 100%;
        }
    }
}

.banner-img {
    position: relative;
    width: 100%;
    height: 100%;
    flex-basis: 50%;
    overflow: hidden;

    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
        transform: translateX(5rem)
    }
}

